# ai-video-studio

./: .gitignore  README.md
app/: index.html  package-lock.json
app/src/: App.tsx  api.ts  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/binaries/: .gitkeep
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  engine.rs  lib.rs  setup.rs
app/src-tauri/windows/: hooks.nsh
app/src/components/: AnalyzersPanel.tsx  Canvas.tsx  DirectorCraft.tsx  (+10 more)
engine/: ave-engine.spec  e2e_canvas.py  e2e_generate.py  e2e_music_video.py  launcher.py  pyproject.toml  requirements.txt
engine/ave_engine/: __init__.py  __main__.py  cli.py  config.py  device.py  job_history.py  jobs.py  onboarding.py  presets.py  schemas.py  server.py  uploads.py
engine/ave_engine/analysis/: __init__.py  audio.py  image.py  prompt.py  segment_prompt.py  separate.py
engine/ave_engine/compose/: __init__.py  assemble.py  ffmpeg_ops.py  loop.py  timeline.py
engine/ave_engine/models/: __init__.py  base.py  cogvideox.py  factory.py  image_utils.py  ltx.py  manager.py  registry.py  svd.py  wav2lip.py
engine/ave_engine/pipeline/: __init__.py  export.py
engine/ave_engine/pipelines/: __init__.py  canvas.py  music_video.py  runner.py  single.py
installer/: README-INSTALL.txt  ave-setup.cmd  ave-setup.ps1  ave-uninstall.cmd  ave-uninstall.ps1  manifest.json  sfx-config.txt
installer/tools/: .gitkeep
scripts/: build.ps1  build_engine.ps1  dev.ps1  fetch_7zr.ps1  package_release.ps1  package_standalone.ps1  publish_engine_asset.ps1  smoke-test-v0.2.3.ps1
(+6 files in other folders)
